4/9
1) Move action chains into the click_button() function
2) indent the i += 1 into the if check in get_elements()