@@ -13,3 +13,9 @@
  0
  6
  8
+ 0
+ 2
+ 2
+ 0
+ 0
+ 1
