@@ -1,3 +1,6 @@
 4/9
 1) Move action chains into the click_button() function
 2) indent the i += 1 into the if check in get_elements()
+
+3) Click button also needs extra refresh to get rid of some of the popups
+4) need to add the errors into the JSON (WILL HAVE TO DO THIS WITH PSAL server is back up)
